# BTCMiner

./: .coverage  =4.3.0  btcminer.py  config.json  from Crypto.py  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: README-checkpoint.md
btcminer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
generators/: custom.py
patches/: hdwallet_patch.py
plugins/: sample_generator.py
src/: app.py  sha3.py
src/models/: config.py  wallet.py
src/services/: cache.py  metrics.py  proxy_manager.py
tests/: conftest.py  from Crypto.py  test_cache.py  test_config.py  test_proxy_manager.py  test_wallet.py
